find_package(ament_cmake_gmock REQUIRED)
find_package(ament_lint_auto REQUIRED)
find_package(rr_common_base REQUIRED)

set(ament_cmake_copyright_FOUND TRUE)
set(ament_cmake_cpplint_FOUND TRUE)
ament_lint_auto_find_test_dependencies()

ament_add_gmock(${PROJECT_NAME}_joystick_deserializer_test
    joystick_deserializer_test.cpp
)

target_link_libraries(${PROJECT_NAME}_joystick_deserializer_test  ${PROJECT_NAME}_lib)
